Swagger display by /swagger request
